<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.despical</groupId>
	<artifactId>one-in-the-chamber</artifactId>
	<version>2.7.7</version>

	<name>One In The Chamber</name>
	<inceptionYear>2019</inceptionYear>
	<url>https://www.spigotmc.org/resources/81185/</url>
	<packaging>jar</packaging>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<licenses>
		<license>
			<name>GNU General Public License v3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>Despical</id>
			<name>Berke Akçen</name>
			<email>berkeakcen@gmail.com</email>
			<url>https://www.spigotmc.org/members/615094/</url>
		</developer>
	</developers>

	<issueManagement>
		<system>GitHub Issue Tracker</system>
		<url>https://github.com/Despical/OITC/issues/</url>
	</issueManagement>

	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>papi-repo</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.destroystokyo.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.Despical</groupId>
			<artifactId>Commons</artifactId>
			<version>1.8.83</version>
		</dependency>
		<dependency>
			<groupId>com.github.Despical</groupId>
			<artifactId>InventoryFramework</artifactId>
			<version>2.3.3</version>
		</dependency>
		<dependency>
			<groupId>com.github.Despical</groupId>
			<artifactId>CommandFramework</artifactId>
			<version>1.5.12</version>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.oraxen</groupId>
			<artifactId>oraxen</artifactId>
			<version>1.174.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/oraxen-1.174.0.jar</systemPath>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<goals>
					<goal>compile</goal>
				</goals>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>true</minimizeJar>
							<relocations>
								<relocation>
									<pattern>me.despical.commons</pattern>
									<shadedPattern>me.despical.oitc.commons</shadedPattern>
								</relocation>
								<relocation>
									<pattern>me.despical.commandframework</pattern>
									<shadedPattern>me.despical.oitc.command</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.bstats</pattern>
									<shadedPattern>me.despical.oitc.util</shadedPattern>
								</relocation>
							</relocations>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
										<exclude>fonts/**</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>